set up json /productdetails page

--- a/src/projectDetailsData.json
+++ b/src/projectDetailsData.json
@@ -1,10 +1,135 @@
 {
   "vincirobotics": {
-    "title": "Vinci Robotics!!!!!",
-    "details": "Additional details for Vinci Robotics."
+    "project": {
+      "image": "image.jpg",
+      "title": "Vinci Robotics",
+      "desc": "This is a brief description for this project",
+      "blurb": "This is room for a blurb."
+    },
+    "info": {
+      "role": "Role",
+      "tools": "Tools",
+      "timeline": "timeline",
+      "link": "github/figma link"
+    },
+    "overview": {
+      "image": "image.jpg",
+      "title": "Overview Title Vinci Robotics",
+      "desc": "Overview desc This is a brief description for this project",
+      "blurb": "Overview This is room for a blurb."
+    },
+    "problem": {
+      "image": "image.jpg",
+      "desc": "Problem desc This is a brief description for this project",
+      "blurb": "Problem This is room for a blurb."
+    },
+    "solution": {
+      "image": "image.jpg",
+      "desc": "Solution desc This is a brief description for this project",
+      "blurb": "Solution This is room for a blurb."
+    },
+    "process": {
+      "research": "research",
+      "users": "users",
+      "design": "design",
+      "test": "test"
+    },
+    "research": {
+      "image": "image.jpg",
+      "desc": "research desc This is a brief description for this project",
+      "blurb": "research This is room for a blurb."
+    },
+    "users": {
+      "image": "image.jpg",
+      "desc": "users desc This is a brief description for this project",
+      "blurb": "users This is room for a blurb."
+    },
+    "design": {
+      "image": "image.jpg",
+      "desc": "design desc This is a brief description for this project",
+      "blurb": "design This is room for a blurb."
+    },
+    "test": {
+      "image": "image.jpg",
+      "desc": "test desc This is a brief description for this project",
+      "blurb": "test This is room for a blurb."
+    },
+    "product": {
+      "image": "image.jpg",
+      "desc": "final product desc This is a brief description for this project",
+      "blurb": "final product This is room for a blurb."
+    },
+    "reflection": {
+      "image": "image.jpg",
+      "takeaways": "reflections takeaways for this project",
+      "nextSteps": "next steps for this project"
+    }
   },
+
   "project2": {
-    "title": "Project Two",
-    "details": "Additional details for Project 2."
+    "project": {
+      "image": null,
+      "title": null,
+      "desc": null,
+      "blurb": null
+    },
+    "info": {
+      "role": null,
+      "tools": null,
+      "timeline": null,
+      "link": null
+    },
+    "overview": {
+      "image": null,
+      "title": null,
+      "desc": null,
+      "blurb": null
+    },
+    "problem": {
+      "image": null,
+      "desc": null,
+      "blurb": null
+    },
+    "solution": {
+      "image": null,
+      "desc": null,
+      "blurb": null
+    },
+    "process": {
+      "research": null,
+      "users": null,
+      "design": null,
+      "test": null
+    },
+    "research": {
+      "image": null,
+      "desc": null,
+      "blurb": null
+    },
+    "users": {
+      "image": null,
+      "desc": null,
+      "blurb": null
+    },
+    "design": {
+      "image": null,
+      "desc": null,
+      "blurb": null
+    },
+    "test": {
+      "image": null,
+      "desc": null,
+      "blurb": null
+    },
+    "product": {
+      "image": null,
+      "desc": null,
+      "blurb": null
+    },
+    "reflection": {
+      "image": null,
+      "takeaways": null,
+      "nextSteps": null
+    }
   }
 }
