more styling, working on navbar and starting projects page, trying to figure out images nwo

--- a/src/projectsData.json
+++ b/src/projectsData.json
@@ -1,9 +1,9 @@
 [
   {
     "id": "vincirobotics",
-    "title": "Vinci Robotics",
-    "image": "project1.jpg",
-    "category": "Category"
+    "title": "vinci robotics",
+    "image": "./img/sample.png",
+    "category": "ui/ux, branding"
   },
   {
     "id": "project2",
